# Voice-Assessment-Platform

./: .env.example  README.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Backend/.github/workflows/: backend-ci.yml
Backend/alembic/: env.py
Backend/alembic/versions/: 20260530_0001_initial_schema.py
Backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py
Backend/app/api/: __init__.py
Backend/app/db/: __init__.py  base.py  engine.py
Backend/app/middleware/: rate_limit.py  request_logging.py  security_headers.py
Backend/app/models/: __init__.py  (+5 more)
Backend/docs/: architecture.md  backend-readiness-audit.md  cloudflare-worker-deployment.md  deployment.md  live-e2e-runbook.md  operations.md  production-alignment.md  resend-production-email.md  vapi-assistant-playbook.md  vapi-twilio-phone-calling.md
Backend/scripts/: check_demo_session.py  deploy_cloudflare_worker.ps1  ops_probe.py  prepare_live_vapi_demo.py  provision_vapi_assistant.py  run_presentation_demo.py  seed_demo_data.py  send_resend_test_email.py  smoke_integrations.py  start_demo_vapi_call.py  validate_live_readiness.py  verify_database_schema.py  verify_live_e2e.py  verify_redis_revocation.py  verify_resend_readiness.py  verify_vapi_assistant_readiness.py
Backend/tests/: conftest.py  test_api_e2e.py  test_app_contracts.py  test_bug_audit_fixes.py  test_demo_workflow_scripts.py  test_reporting_and_email.py  test_vapi_assistant_payload.py  test_vapi_call_payload.py  test_vapi_signature.py
(+60 files in other folders)
