[project]
name = "voice-assessment"
version = "0.1.0"
description = "FastAPI backend scaffold for a voice assessment platform."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.9.1",
    "anthropic==0.100.0",
    "httpx==0.28.1",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "structlog==25.3.0",
    "python-multipart==0.0.20",
    "resend[async]==2.30.0",
    "slowapi==0.1.9",
    "redis==5.2.1",
]

[project.scripts]
voice-report-worker = "app.workers.report_worker:main"

[build-system]
requires = ["hatchling==1.27.0", "editables==0.5"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "ANN"]
